:bug: Fix swap styles for groups names too long

--- a/frontend/src/app/main/ui/workspace/sidebar/assets/groups.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/assets/groups.scss
@@ -17,6 +17,8 @@
 }
 
 .path {
+  @include textEllipsis;
+  max-width: 90%;
   margin-left: $s-2;
   text-transform: initial;
   color: var(--title-foreground-color-hover);
